--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 #ignore data/ except for md,txt,cfg files
-data/*
+data/**
 !data/**/*.cfg
 !data/*.md
 !data/**/*.txt
 !data/**/*.md
 
+.DS_Store
 ## Bottom of the file is just python template from github:
 ## Please update only the part above this comment
 
