--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 #ignore data/ except for md,txt,cfg files
-data/**
-!data/**/*.cfg
-!data/*.md
-!data/**/*.txt
-!data/**/*.md
+data/**/*.wav
+#!data/**/*.cfg
+#!data/*.md
+#!data/**/*.txt
+#!data/**/*.md
 
 .DS_Store
 ## Bottom of the file is just python template from github:
