major changes in repo structure, pipenved setup, added subjects and a couple of necessary scripts to prepare data - everything will be updated further in nearest future I hope

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 #ignore data/ except for md,txt,cfg files
 data/**/*.wav
+subjects/**/*.mp4
+subjects/**/*.done
+subjects/**/*.caption
+!subjects/**/*.json
 #!data/**/*.cfg
 #!data/*.md
 #!data/**/*.txt
