--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,10 @@ name = 'pypi'
 python_version = '3.6'
 
 [packages]
+fire = '*'
+marshmallow = "==3.0.0rc3"
 numpy = '*'
 pandas = '*'
-fire = '*'
+pocketsphinx = '*'
+pydub = '*'
 pytube = '*'
