--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 data/**/*.wav
 subjects/**/*.mp4
 subjects/**/*.done
-subjects/**/*.caption
+subjects/**/*.captions
 !subjects/**/*.json
 #!data/**/*.cfg
 #!data/*.md
