updating master branch to actual state: most improvements applied to tsne and visualizations - most important change is substitution of sklearn tsne to multicore tsne

--- a/Pipfile
+++ b/Pipfile
@@ -10,8 +10,10 @@ python_version = '3.6'
 fire = '*'
 marshmallow = "==3.0.0rc3"
 matplotlib = '*'
+MulticoreTSNE = '*'
 numpy = '*'
 pandas = '*'
+parse = '*'
 pocketsphinx = '*'
 pydub = '*'
 pytube = '*'
