big chunk of changes in progress - including adding few more pipelines and rewriting code [WIP]

--- a/Pipfile
+++ b/Pipfile
@@ -7,15 +7,22 @@ name = 'pypi'
 python_version = '3.6'
 
 [packages]
+easygui = '*'
 fire = '*'
 marshmallow = "==3.0.0rc3"
 matplotlib = '*'
 MulticoreTSNE = '*'
+natsort = '*'
+networkx = '*'
 numpy = '*'
 pandas = '*'
 parse = '*'
 pocketsphinx = '*'
 pydub = '*'
+python_speech_features = '*'
 pytube = '*'
+retry = '*'
+scikit-image = '*'
 scipy = '*'
 sklearn = '*'
+tqdm = '*'
