Big chunk of changes, part2 [still WIP] - I added and improved lot of docstrings, added first utests and updated&tested 2 chains

--- a/Pipfile
+++ b/Pipfile
@@ -9,20 +9,22 @@ python_version = '3.6'
 [packages]
 easygui = '*'
 fire = '*'
-marshmallow = "==3.0.0rc3"
+marshmallow = "==3.0.0rc5"
 matplotlib = '*'
 MulticoreTSNE = '*'
-natsort = '*'
+natsort = '==6.0.0'
 networkx = '*'
 numpy = '*'
 pandas = '*'
 parse = '*'
 pocketsphinx = '*'
 pydub = '*'
+pytest = '==4.4.1'
 python_speech_features = '*'
-pytube = '*'
+pytube = {editable = true,path = "./thirdparty/pytube"}
 retry = '*'
 scikit-image = '*'
 scipy = '*'
 sklearn = '*'
-tqdm = '*'
+toposort = '==1.5'
+tqdm = '==4.31.1'
