--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "pocketsphinx"]
 	path = pocketsphinx
 	url = git@github.com:cmusphinx/pocketsphinx.git
+[submodule "thirdparty/pocketsphinx"]
+	path = thirdparty/pocketsphinx
+	url = git@github.com:cmusphinx/pocketsphinx.git
+[submodule "thirdparty/pytube"]
+	path = thirdparty/pytube
+	url = git@github.com:nficano/pytube.git
