--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "thirdparty/pytube"]
 	path = thirdparty/pytube
 	url = git@github.com:nficano/pytube.git
+[submodule "thirdparty/Multicore-TSNE"]
+	path = thirdparty/Multicore-TSNE
+	url = git@github.com:sg-s/Multicore-TSNE.git
