--- a/Pipfile
+++ b/Pipfile
@@ -7,23 +7,27 @@ name = 'pypi'
 python_version = '3.6'
 
 [packages]
-easygui = '*'
-fire = '*'
+coverage = '==4.5.4'
+easygui = '==0.98.1'
+fire = '==0.2.0'
 marshmallow = "==3.0.0rc5"
-matplotlib = '*'
+matplotlib = '==3.1.1'
 MulticoreTSNE = {path = "./thirdparty/Multicore-TSNE"}
 natsort = '==6.0.0'
-numpy = '*'
-pandas = '*'
-parse = '*'
-pocketsphinx = '*'
-pydub = '*'
+networkx = '*'
+noisereduce = '*'
+numpy = '==1.17.0'
+pandas = '==0.25.0'
+parse = '==1.12.0'
+pocketsphinx = '==0.1.15'
+pydiffmap = '==0.2.0.1'
+pydub = '==0.23.1'
 pytest = '==4.4.1'
-python_speech_features = '*'
+python_speech_features = '==0.6'
 pytube = {editable = true,path = "./thirdparty/pytube"}
-retry = '*'
-scikit-image = '*'
-scipy = '*'
-sklearn = '*'
+retry = '==0.9.2'
+scikit-image = '==0.15.0'
+scikit-learn = '==0.21.2'
+scipy = '==1.3.0'
 toposort = '==1.5'
 tqdm = '==4.31.1'
