--- a/scripts/logging.conf
+++ b/scripts/logging.conf
@@ -8,7 +8,7 @@ keys=stream_handler,file_handler
 keys=formatter
 
 [logger_root]
-level=INFO
+level=DEBUG
 handlers=stream_handler,file_handler
 
 [handler_stream_handler]
